--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">About Me</a></li>
-							<li><a href="#two">Experience</a></li>
-							<li><a href="#three">Projects</a></li>
+							<li><a href="#one">Experience</a></li>
+							<li><a href="#two">Projects</a></li>
+							<li><a href="#three">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -35,7 +35,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Brae Chamberlin</h1>
-							<p>I have a giant penis.</p>
+							<p>I have a giant penisgit.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
